--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
 
     defaultConfig {
         applicationId "com.cityrally.app"
-        minSdkVersion 9
+        minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -34,5 +34,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.2'
+    compile 'com.android.support:cardview-v7:21.0.2'
+    compile 'com.android.support:recyclerview-v7:21.0.2'
     compile 'com.google.android.gms:play-services:6.1.71'
 }
