--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,10 +36,11 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name="com.cityrally.app.MapsActivity"
-            android:label="@string/title_activity_maps" >
-        </activity>
+        <service
+            android:name="com.cityrally.app.location.ReceiveTransitionsIntentService"
+            android:label="@string/app_name"
+            android:exported="false">
+        </service>
     </application>
 
 </manifest>
