--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.cityrally.app.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,7 +48,7 @@
         <service
             android:name="com.cityrally.app.location.ReceiveTransitionsIntentService"
             android:label="@string/app_name"
-            android:exported="false">
+            android:exported="true">
         </service>
     </application>
 
