--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
 
         <activity
             android:name=".game.compass.CompassActivity"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
         </activity>
 
